# skel_videochat

./: .gitignore  args.py  auto_encoder.py  compress_keypoints.py  convert_log_to_json.py  create_video.py  csv_to_video.py  eval_test_results.csv  evaluate.py  evaluate_clean.py  extract_keypoints.py  face_warp_test.py  generated_keypoints.csv  log2.txt  pr  print.cpp  scale_keypoints.py  warp_core.py  warped_keypoints_1920x1080.csv  warped_test_keypoints_1920x1080.csv
data/: eval_test_results_pose_per_kp_mse.npy  eval_warped_results.csv  eval_warped_results_pose_per_kp_mse.npy  head_c.csv  test.csv
debug_frames/: debug_log.json
misc/: requirements.txt
scripts/: analyze_debug_log.py  debug_utils.py  image_warp.py  partitions.py
sk3_frames/: video_info.txt
src/: CMakeLists.txt  args.py  csv_to_video.py  csv_to_video_cuda.cpp  debug_utils.py
